@@ -86,6 +86,7 @@ oSoe'Y.gU#(EqHA5K}v}2ah,QlHa[S^}5ZuTefR\n ZA[pF1_ZNlDB5D_D\
 JzTbXTM!V{ecn<+l,RDM&H3CKdu8tWENJlbRm)a|Hk+limu}hMtR\\E!%r\
 9wC\"6\n ebr5rj1[UJ5zDEDsfo`N7~s%;P`\\JK'#y.w^>K]E~{`wZru")))
 ;;(defvar shimbun-impress-expiration-days 7)
+(defvar shimbun-impress-ignored-subject-regexp "^\\(AD\\|PR\\):")
 
 (luna-define-method shimbun-index-url ((shimbun shimbun-impress))
   (or (nth 4 (assoc (shimbun-current-group-internal shimbun)
@@ -152,8 +153,8 @@ JzTbXTM!V{ecn<+l,RDM&H3CKdu8tWENJlbRm)a|Hk+limu}hMtR\\E!%r\
 	    (mapcar
 	     (lambda (header)
 	       (let ((subject (shimbun-header-subject header)))
-		 (unless (and subject (>= (length subject) 3)
-			      (string= (substring subject 0 3) "AD:"))
+		 (unless (string-match shimbun-impress-ignored-subject-regexp
+				       subject)
 		   header)))
 	     (luna-call-next-method)))
     (with-temp-buffer
